--- a/src/Home.css
+++ b/src/Home.css
@@ -70,7 +70,7 @@
 .line__skills {
   height: 3.5px;
   width: 25%;
-  background: #d90429;
+  background: #b56576;
   margin: 0 auto;
   margin-bottom: 25px;
 }
@@ -123,7 +123,7 @@
 
 .header {
   background: url(images/background-hi1.jpg) top;
-  background-size: cover;
+  /* background-size: cover; */
   background-attachment: fixed;
   position: relative;
   z-index: 0;
@@ -499,6 +499,15 @@ a {
 
 .readMore {
   color: white;
+}
+
+.formMsg {
+  font-weight: lighter;
+  font-family: sans-serif;
+  font-size: 15px;
+  margin: 0 auto;
+  margin-top: 10px;
+  color: green;
 }
 
 @media screen and (max-width: 650px) {
