--- a/src/Home.css
+++ b/src/Home.css
@@ -510,5 +510,8 @@ a {
   color: green;
 }
 
-@media screen and (max-width: 650px) {
+@media all and (max-width: 700px) {
+  * {
+    --animate-duration: 0s;
+  }
 }
